--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "States of Algeria",
   "main": "App.js",
   "scripts": {
-   
+    "dev": "nodemon app",
     "start": "node app"
   },
   "author": "Amine ouldaouali",
